<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authUser.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!-- Toolbar matching Sign Up style -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/customer_login_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollbarParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="0dp"
            android:fillViewport="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <!-- LOGIN IMAGE -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/ic_image_login_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="5dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <!-- Main Divider -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/divider_color" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <!-- Section: Login Details -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="7dp"
                        android:letterSpacing="0.10"
                        android:text="@string/login_details"
                        android:textColor="@color/green_primary"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <!-- PHONE NUMBER -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/enter_mobile_number"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/green_primary"
                        app:hintTextColor="@color/green_primary"
                        app:startIconDrawable="@drawable/ic_phone_number"
                        app:startIconTint="@color/dark_gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:digits="0123456789 "
                            android:maxLength="11"
                            android:maxLines="1"
                            android:paddingVertical="12dp"
                            android:singleLine="true"
                            android:textColor="@color/text_primary"
                            android:textColorHint="@color/text_secondary"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- PASSWORD -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/enter_your_password"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/green_primary"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/dark_gray"
                        app:hintTextColor="@color/green_primary"
                        app:startIconDrawable="@drawable/ic_password"
                        app:startIconTint="@color/dark_gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingVertical="12dp"
                            android:singleLine="true"
                            android:textColor="@color/text_primary"
                            android:textColorHint="@color/text_secondary"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- LOGIN BUTTON -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ic_bg_rounded_black"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="10dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <!-- Footer with Sign Up link -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/dont_have_an_account"
                            android:textColor="@color/dark_gray" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/sign_up"
                            android:textColor="@color/green_primary"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:paddingBottom="4dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_image_footer" />

                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</FrameLayout>